test/Fail/Issue3188.err
Issue3188.agda:4.5-8: error: [UnequalTypes]
The types
  Set₁
and
  Set
are not equal
when checking that the expression Set has type Set
